<resources>
    <string name="app_name">UDrive</string>

    <!-- Nombre de los activities en el Action Bar -->
    <string name="activity_loading">Loading</string>
    <string name="activity_iniciar_sesion">Iniciar Sesión</string>
    <string name="activity_elegir_sesion">Elegir Sesión</string>
    <string name="activity_registrarse">Registrarse</string>
    <string name="activity_display">Display</string>
    <string name="activity_perfil">Perfil</string>
    <string name="activity_metadatos">Detalles</string>

    <!-- Campos del menu de Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="buscar">Buscar archivo</string>
    <string name="subir">Subir archivo</string>
    <string name="crear_carpeta">Crear carpeta</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="actualizar">Actualizar</string>
    <string name="papelera">Papelera</string>
    <string name="carpetas_compartidas">Archivos compartidos</string>

    <string name="buscar_nombre">Buscar por nombre</string>
    <string name="buscar_extension">Buscar por extensión</string>
    <string name="buscar_etiqueta">Buscar por etiquetas</string>
    <string name="buscar_propietario">Buscar por propietario</string>

    <string name="ingresar_ip">Ingresar IP</string>
    <string name="atras">Atrás</string>
    <string name="editar">Editar</string>



    <!-- Campos botones -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrar nuevo usuario</string>
    <string name="actualizar_perfil">Actualizar perfil</string>
    <string name="actualizar_metadatos">Actualizar</string>

    <!-- Campos EditText -->
    <string name="hint_usuario">Nombre de usuario</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_nombre">Pancho</string>
    <string name="hint_mail">udrive@tallerii.com</string>
    <string name="hint_foto">/sdcard/foto.png</string>
    <string name="hint_ubicacion">Emiratos Arabes Unidos</string>
    <string name="hint_search">Buscar archivos...</string>


    <!-- Campos TextView -->
    <string name="nombre">Nombre: </string>
    <string name="mail">Mail: </string>
    <string name="foto">Foto: </string>
    <string name="usuario"> Usuario: </string>
    <string name="contraseña">Contaseña: </string>
    <string name="ubicacion">Última ubicación: </string>
    <string name="fecha">Fecha última modificación: </string>
    <string name="usrUltimaModificacion">Modificado por: </string>
    <string name="propietario">Propietario: </string>
    <string name="usrCompartidos">Usuarios compartidos: </string>
    <string name="etiquetas">Etiquetas: </string>

    <string name="conectando">Conectando con el servidor...</string>
    <string name="title_activity_maps">Map</string>

</resources>
