<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/subir_archivo"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/subir"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/crear_carpeta"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/crear_carpeta"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <!--<item android:id="@+id/buscar_archivo"-->
        <!--android:icon="@android:drawable/ic_menu_search"-->
        <!--android:title="@string/buscar"-->
        <!--android:orderInCategory="3"-->
        <!--app:showAsAction="never"/>-->

    <item android:id="@+id/ver_perfil"
        android:title="@string/ver_perfil"
        android:orderInCategory="4"
        app:showAsAction="never"/>

    <item android:id="@+id/cerrar_sesion"
        android:title="@string/cerrar_sesion"
        android:orderInCategory="5"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
