<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item android:id="@+id/buscar_nombre"
            android:title="@string/buscar_nombre"
            android:checkable="true"
            android:checked="true"
            android:orderInCategory="1"
            app:showAsAction="never"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

        <item android:id="@+id/buscar_extension"
            android:title="@string/buscar_extension"
            android:checkable="true"
            android:checked="false"
            android:orderInCategory="2"
            app:showAsAction="never"/>

        <item android:id="@+id/buscar_etiqueta"
            android:title="@string/buscar_etiqueta"
            android:checkable="true"
            android:checked="false"
            android:orderInCategory="3"
            app:showAsAction="never"/>

        <item android:id="@+id/buscar_propietario"
            android:title="@string/buscar_propietario"
            android:checkable="true"
            android:checked="false"
            android:orderInCategory="4"
            app:showAsAction="never"/>
    </group>

</menu>