<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/violeta_fondo"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="10"
            android:src="@mipmap/udrive" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/nombre"
                android:gravity="start|center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/metadatos_nombre"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:nextFocusDown="@+id/metadatos_etiquetas"
                android:imeOptions="actionNext"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/fecha"
                android:gravity="start|center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/metadatos_fecha"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/usrUltimaModificacion"
                android:gravity="start|center"
                android:textSize="18sp" />

            <!-- Displays keyboard when touched -->
            <TextView
                android:id="@+id/metadatos_usrUltimaModificacion"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="start"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/propietario"
                android:gravity="start"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/metadatos_propietario"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/etiquetas"
                android:gravity="start|center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/metadatos_etiquetas"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:nextFocusDown="@+id/metadatos_usrCompartidos"
                android:imeOptions="actionNext"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:layout_weight="0"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:hint="@string/usrCompartidos"
                android:gravity="start|center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/metadatos_usrCompartidos"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:imeOptions="actionDone"/>
        </LinearLayout>


        <Button
            android:id="@+id/actualizar"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:text="@string/actualizar"/>

    </LinearLayout>

</ScrollView>
